devops. CI 테스트 - 1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,19 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DB_NAME}
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+  server:
+    container_name: javaAssignment_server_container
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 8080:8080
+    depends_on:
+      - mysql
+    restart: always
+
+volumes:
+  mysql_data:
