--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,15 +33,10 @@ jobs:
           chmod +x ./gradlew
           ./gradlew build
 
-      - name: Debug Docker Variables
-        run: |
-          echo "Docker ID: ${{ secrets.SECRET_DOCKER_ID }}"
-          echo "Docker Repo: ${{ secrets.SECRET_DOCKER_REPO }}"
-
       - name: 도커로 빌드시키고 hub에 올리기
         run: |
           docker login -u ${{secrets.SECRET_DOCKER_ID}} -p ${{secrets.SECRET_DOCKER_TOKEN}}
-          docker build -t nayoun340/java-assignment .
+          docker build -t nayoun340/java-assignment:latest .
           docker push ${{secrets.DOCKER_HUB_ID}}/${{secrets.SECRET_DOCKER_REPO}}
 
       - name: ec2에 docker-compose.yml 파일 복사시키기
