--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           docker login -u ${{secrets.SECRET_DOCKER_ID}} -p ${{secrets.SECRET_DOCKER_TOKEN}}
           docker build -t nayoun340/java-assignment:latest .
-          docker push ${{secrets.DOCKER_HUB_ID}}/${{secrets.SECRET_DOCKER_REPO}}
+          docker push nayoun340/java-assignment:latest
 
       - name: ec2에 docker-compose.yml 파일 복사시키기
         uses: appleboy/scp-action@v0.1.4
