--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,8 +36,8 @@ jobs:
       - name: 도커로 빌드시키고 hub에 올리기
         run: |
           docker login -u ${{secrets.SECRET_DOCKER_ID}} -p ${{secrets.SECRET_DOCKER_TOKEN}}
-          docker build -t nayoun340/java-assignment:latest .
-          docker push nayoun340/java-assignment:latest
+          docker build -t nayoun340/java-assignment .
+          docker push nayoun340/java-assignment
 
       - name: ec2에 docker-compose.yml 파일 복사시키기
         uses: appleboy/scp-action@v0.1.4
