--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,7 +8,7 @@ jobs:
   cicd:
     runs-on: [ ubuntu-latest ]
     steps:
-      - name:  나의 깃헙 코드를 깃헙 액션의 VM에 옮기는 작업 중 ...
+      - name: 깃헙 코드를 VM으로 복사
         uses: actions/checkout@v4
 
       - name: 깃헙 액션의 VM에 자바 설치중 ...
@@ -22,50 +22,58 @@ jobs:
           echo "${{ secrets.SECRET_ENV }}" > .env
         shell: bash
 
-      - name: VM내의 도커를 통한 MySQL 구동 시키기
+      - name: MySQL 도커 컨테이너 실행
         uses: mirromutth/mysql-action@v1.1
         with:
           mysql database: ${{secrets.SECRET_DB_NAME}}
           mysql root password: ${{secrets.SECRET_DB_PASSWORD}}
 
-      - name: 빌드 및 테스트 코드 돌리는중 ...
+      - name: 빌드 및 테스트 실행
         run: |
           chmod +x ./gradlew
           ./gradlew build
 
-      - name: 도커로 빌드시키고 hub에 올리기
+      - name: 도커 이미지 빌드 및 푸시
         run: |
           docker login -u ${{secrets.SECRET_DOCKER_ID}} -p ${{secrets.SECRET_DOCKER_TOKEN}}
           docker build -t ${{secrets.SECRET_DOCKER_ID}}/${{secrets.SECRET_DOCKER_REPO}} .
           docker push ${{secrets.SECRET_DOCKER_ID}}/${{secrets.SECRET_DOCKER_REPO}}
 
-      - name: ec2에 docker-compose.yml 파일 복사시키기
+      - name: EC2에 jar 파일 복사
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{secrets.SECRET_AWS_HOST}}
           key: ${{secrets.SECRET_AWS_KEY}}
           username: ubuntu
-          source: ${{secrets.SECRET_DOCKER_COMPOSE_YML}}
-          target: ~/docker-compose.yml
+          source: ./build/libs/*.jar # jar 파일 경로
+          target: ~/app.jar
 
-      - name: executing remote ssh
+      - name: 실행용 스크립트 작성
+        run: |
+          echo '#!/bin/bash
+          set -e
+          mkdir -p ~/app
+          cd ~/app
+          jar -xf ~/app.jar
+          docker-compose down || true
+          docker-compose up -d
+          docker image prune -f' > deploy.sh
+          chmod +x deploy.sh
+
+      - name: 스크립트 복사 및 원격 실행
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{secrets.SECRET_AWS_HOST}}
+          key: ${{secrets.SECRET_AWS_KEY}}
+          username: ubuntu
+          source: ./deploy.sh
+          target: ~/deploy.sh
+
+      - name: 원격 실행
         uses: appleboy/ssh-action@master
         with:
           host: ${{secrets.SECRET_AWS_HOST}}
           key: ${{secrets.SECRET_AWS_KEY}}
           username: ubuntu
           script: |
-            sudo systemctl restart docker
-            docker login -u ${{secrets.SECRET_DOCKER_ID}} -p ${{secrets.SECRET_DOCKER_TOKEN}}
-            sudo docker pull ${{secrets.SECRET_DOCKER_ID}}/${{secrets.SECRET_DOCKER_REPO}}
-            cd ~/docker-compose.yml
-            sudo docker-compose down
-            sudo docker-compose up -d
-            sudo docker image prune -f
-
-      - name: 오류명 상세히 알려줌
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: build/test-results/test
+            bash ~/deploy.sh
