devops. CD 테스트 - 15

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,10 +22,15 @@ jobs:
           echo "${{ secrets.SECRET_ENV }}" > .env
         shell: bash
 
+      - name: aws docker-compose.yml 설치
+        run: |
+          echo "${{ secrets.SECRET_DOCKER_COMPOSE_YML }}" > docker-compose.yml
+        shell: bash
+
       - name: aws 배포용 yml 파일 생성
         run: |
-          cd ./ 
-          echo "${{ secrets.SECRET_DOCKER_COMPOSE_YML }}" > ./docker-compose.yml
+          cd ./src/main/resources 
+          echo "${{ secrets.SECRET_APPLICATION_YML }}" > ./application.yml
         shell: bash
 
       - name: MySQL 도커 컨테이너 실행
